BasicCalculator - solve method working